# deeplearning-scratch

./: config.yaml  entrypoint.py  playground_guide.tex  pyproject.toml
playground/: server.py
playground/static/: app.js  index.html  style.css
runs/20260708-134953-playground-1783514991-8d89df49/: config.json  config.yaml  metadata.json
runs/20260708-135001-playground-1783515000-6f64fbb3/: config.json  config.yaml  metadata.json
runs/20260708-135001-playground-1783515000-6f64fbb3/artifacts/: class_to_index.json  data_schema.json  final_model.pt  model_summary.json  split_indices.json
runs/20260708-135001-playground-1783515000-6f64fbb3/checkpoints/: best.pt  epoch_0001.pt  epoch_0002.pt  epoch_0003.pt  epoch_0004.pt  epoch_0005.pt  epoch_0006.pt  epoch_0007.pt  epoch_0008.pt  epoch_0009.pt  epoch_0010.pt  epoch_0011.pt  epoch_0012.pt  epoch_0013.pt  epoch_0014.pt  epoch_0015.pt  epoch_0016.pt  epoch_0017.pt  epoch_0018.pt  epoch_0019.pt  epoch_0020.pt  epoch_0021.pt  epoch_0022.pt  epoch_0023.pt  epoch_0024.pt  epoch_0025.pt  epoch_0026.pt  epoch_0027.pt  epoch_0028.pt  epoch_0029.pt  epoch_0030.pt  epoch_0031.pt  epoch_0032.pt  epoch_0033.pt  epoch_0034.pt  epoch_0035.pt  epoch_0036.pt  epoch_0037.pt  epoch_0038.pt  epoch_0039.pt  (+11 more)
runs/20260708-135001-playground-1783515000-6f64fbb3/logs/: events.jsonl
src/deepscratch/: __init__.py  config.py  pipeline.py
src/deepscratch/data/: __init__.py  base.py  tabular.py
src/deepscratch/encoders/: __init__.py  base.py  categorical.py  cnn.py  mlp.py  multiencoder.py  rnn.py  transformer.py
(+16 files in other folders)
