[project]
name = "deepscratch"
version = "0.1.0"
description = "Interactive deep learning model builder"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "pandas",
    "numpy",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"